use correct source

--- a/clusters/gke/demo-services/deployment.yaml
+++ b/clusters/gke/demo-services/deployment.yaml
@@ -11,7 +11,7 @@ spec:
   retryInterval: 2m0s
   sourceRef:
     kind: GitRepository
-    name: demo-microservices
+    name: flux-system
   targetNamespace: demo
   timeout: 3m0s
   wait: true
