--- a/clusters/gke/istio/loki.yaml
+++ b/clusters/gke/istio/loki.yaml
@@ -95,7 +95,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: loki-memberlist
-  namepsace: istio-system
+  namespace: istio-system
   labels:
     helm.sh/chart: loki-4.8.0
     app.kubernetes.io/name: loki
